--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,4 +1,16 @@
-{%extends 'base.html'%}
-{%block content%}
-<h1>Register</h1>
-{%endblock%}
+{% extends 'base.html' %}
+{% block content %}
+
+    <div class="col-md-6 offset-md-3">
+        <h1>Register</h1>
+        <br/>
+        <form method="POST" action="{% url 'register' %}">  {# ✅ Fixed action URL #}
+            {% csrf_token %}
+
+            {{ form.as_p }}
+            <br/>
+            <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+    </div>
+
+{% endblock %}
